nwp-db/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ns: nwp-db
  creationTimestamp: null
  name: nwp-db
spec: {}
status: {}
