nwp-db/pod-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-c
  namespace: nwp-db
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: database
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: database
  name: pod-c
  namespace: nwp-db
spec:
  containers:
  - image: nginx
    name: pod-c
    ports:
    - containerPort: 80
